--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,9 +5,10 @@
             <hr class="my-2">
             <p class="lead">tansuta.r</p>
             <p class="lead">
-                <button type="button" href="/products" class="btn btn-success">PRODUCT<span class="badge">7</span></button>
-                <button type="button" href="/users" class="btn btn-warning">USER <span class="badge">3</span></button>
-                
+                <!----<button type="button" href="/products" class="btn btn-success">PRODUCT<span class="badge">7</span></button>
+                <button type="button" href="/users" class="btn btn-primary"> <span class="badge">7</span></button>-->
+                <a class="btn btn-warning " href="/products" role="button">PRODUCT<span class="badge">7</span></a>
+                <a class="btn btn-danger " href="/users" role="button">USER<span class="badge">3</span></a>
             </p>
         </div>
 
