--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/users">User </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/reports">Report </a>
+                </li>
                  <!--  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
