--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,5 +1,11 @@
 <% include ../partials/header %>
-
+<div class="container">
+    <h2>Filterable Table</h2>
+    <p>Type something in the input field to search the table for first names, last names or emails:</p>  
+    <input class="form-control" id="myInput" type="text" placeholder="Search..">
+    <br>
+    <table class="table table-bordered table-striped">
+        </div>
 <table class="table">
     <thead>
         <tr>
@@ -11,7 +17,7 @@
 
         </tr>
     </thead>
-    <tbody>
+    <tbody id="myTable">
     <%products.forEach(function(product){ %>
 <tr>
             <td scope="row"><%= product.id %></td>
@@ -26,5 +32,15 @@
       
     </tbody>
 </table>
+<script>
+        $(document).ready(function(){
+          $("#myInput").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#myTable tr").filter(function() {
+              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+        </script>
 
  
