--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <div class="container">
-    <p>Search :</p>  
+    <h2>Search: </h2>
     <input class="form-control" id="myInput" type="text" placeholder="Search..">
     <br>
     <table class="table table-bordered table-striped">
