--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -35,23 +35,24 @@
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
-<div class="row">
-    <div class='col-sm-6'>
-        <div class="form-group">
-            <div class='input-group date' id='datetimepicker1'>
-                <input type='text' class="form-control" />
-                <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-calendar"></span>
-                </span>
+<div class="container">
+    <div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
             </div>
         </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
     </div>
-    <script type="text/javascript">
-        $(function () {
-            // $('#datetimepicker1').datetimepicker();
-            $('#datetimepicker1').data("DateTimePicker1").FUNCTION()
-        });
-    </script>
 </div>
 
 
