--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -35,30 +35,16 @@
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
-<div class="container">
-    <br />
-    <div class="row">
-      <div class='col-sm-3'>
-        <div class="form-group">
-          <div id="filterDate2">
-            
-            <!-- Datepicker as text field -->         
-            <div class="input-group date" data-date-format="dd.mm.yyyy">
-              <input  type="text" class="form-control" placeholder="dd.mm.yyyy">
-              <div class="input-group-addon" >
-                <span class="glyphicon glyphicon-th"></span>
-              </div>
-            </div>
-            
-          </div>    
-        </div>
-      </div>
-    </div>
-  </div>
-  <script>
-    $('.input-group.date').datepicker({format: "dd.mm.yyyy"}); 
-  </script>
-
+<div class="input-append date form_datetime">
+    <input size="16" type="text" value="" readonly>
+    <span class="add-on"><i class="icon-th"></i></span>
+</div>
+ 
+<script type="text/javascript">
+    $(".form_datetime").datetimepicker({
+        format: "dd MM yyyy - hh:ii"
+    });
+</script>    
 
 
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
