--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -35,14 +35,20 @@
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
 </div>
-<div>
-  <input id="datepicker" width="276" />
-  <script>
-      $('#datepicker').datepicker({
-          uiLibrary: 'bootstrap4'
-      });
-  </script>
-  </div>
+<div class="form-group">
+    <label for="">Creat At</label>
+    <input type="text"
+      class="form-control" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
+    <small id="helpId" class="form-text text-muted">Creat At</small>
+    <script>
+        $('#datepicker').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    </script>
+</div>
+
+  
+  
 <div>
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
