--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -3,7 +3,7 @@
   function chkConfirm(){
     if(confirm('Do you want to delete product')==true){
    }else{
-    alert('You selected to cancel.');
+    return(null);
   }
 }
 </script>
