--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -2,6 +2,7 @@
 <script language="JavaScript">
   function chkConfirm(){
     if(confirm('Do you want to delete product')==true){
+      window.location.href = "/product_delete/<%= product.id %>";
    }else{
     return(null);
   }
@@ -52,7 +53,7 @@
 <div>
 <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
-<a name="" id="" name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="/product_delete/<%= product.id %>" role="button">DELETE</a>
+<a name="" id="" name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="" role="button">DELETE</a>
 </div>
 </div>
 </form>
