--- a/views/pages/product_edit.ejs
+++ b/views/pages/product_edit.ejs
@@ -31,16 +31,17 @@
   <small id="helpId" class="form-text text-muted">Product Price</small>
 </div>
 
-<div class="form-group">
+<!--<div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
     class="form-control" value="<%= time %>"name="creat at" id="" aria-describedby="helpId" placeholder="" disabled>
   <small id="helpId" class="form-text text-muted">Creat At</small>
-</div>
+</div>-->
+
 <div class="form-group">
     <label for="">Creat At</label>
     <input type="text"
-      class="form-control" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
+      class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
     <small id="helpId" class="form-text text-muted">Creat At</small>
     <script>
         $('#datepicker').datepicker({
