--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,12 +1,12 @@
 <% include ../partials/header %>
 <br>
 <br>
-<div class="container">
+<!--<div class="container">
     <h3>Search Product: </h3>
     <input class="form-control" id="myInput" type="text" placeholder="Search..">
     <br>
     <table class="table table-bordered table-striped">
-</div>
+</div>-->
 <table class="table">
     <thead>
         <tr>
