--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -54,11 +54,11 @@
                         <a class="dropdown-item" href="#">Action 2</a>
                     </div>
                 </li>
-            </ul>
+            </ul>-->
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>-->
+                    <input class="form-control" id="myInput" type="text" placeholder="Search..">
+                
+            </form>
         </div>
     </nav>
     <div class="container">
