--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,12 +55,12 @@
                     </div>
                 </li>
             </ul>-->
-            
+            <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control" id="myInput" type="text" placeholder="Search..">
+                
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
-        <form class="form-inline my-2 my-lg-0">
-                <input class="form-control" id="myInput" type="text" placeholder="Search..">
-            
-        </form>
     </nav>
     <div class="container">
         
