--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<!--<% include ../partials/header %>
 
 <table class="table">
     <thead>
@@ -28,3 +28,5 @@
         
     </tbody>
 </table>
+<% include ../partials/footer %>
+-->
