--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -1,35 +1,31 @@
 <% include ../partials/header %>
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <p><i class="fa fa-user"></i></p>
-        <h3>11+</h3>
-        <p>Partners</p>
-      </div>
-    </div>
-  
-    <div class="column">
-      <div class="card">
-        <p><i class="fa fa-check"></i></p>
-        <h3>55+</h3>
-        <p>Projects</p>
-      </div>
-    </div>
-  
-    <div class="column">
-      <div class="card">
-        <p><i class="fa fa-smile-o"></i></p>
-        <h3>100+</h3>
-        <p>Happy Clients</p>
-      </div>
-    </div>
-  
-    <div class="column">
-      <div class="card">
-        <p><i class="fa fa-coffee"></i></p>
-        <h3>100+</h3>
-        <p>Meetings</p>
-      </div>
-    </div>
-  </div>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Price</th>
+            <th>Email</th>
+            <th>password</th>
+             
+        </tr>
+    </thead>
+    <tbody id="myTable">
+    <%reports.forEach(function(report){ %>
+<tr>
+            <td scope="row"><%= report.id %></td>
+            <td><%= report.title %></td>
+            <td><%= report.price %></td>
+            <td><%= report.email %></td>
+            <td><%= report.password %></td>
+            <td>
+            <a  class="btn btn-primary" href="/reports/<%= report.id %>" role="button">EDIT</a>
+            </td>
+        </tr>
+    <% }); %>
+        
+        
+    </tbody>
+</table>
 <% include ../partials/footer %>
