--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -1,13 +1,13 @@
 <% include ../partials/header %>
-<script language="javascript">
-function fncAlert(){
-
-alert('Do you want to delete product');
-
+<script language="JavaScript">
+  function chkConfirm(){
+    if(confirm('Do you want to delete product')==true){
+      window.location = "/product_delete/<%= product.id %>";
+      
+   }else{
+    return(null);
+  }
 }
-
-</script>
-  
 
 <form action ="/user/update" method = "post">
 <div class="jumbotron">
@@ -46,7 +46,7 @@ alert('Do you want to delete product');
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
-<a name="" id="" OnClick="JavaScript:fncAlert();" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button">DELETE</a>
+<a name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="#" role="button">DELETE</a>
 
 
 </div>
