--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -2,7 +2,7 @@
 <script language="JavaScript">
   function chkConfirm(){
     if(confirm('Do you want to delete product')==true){
-      window.location = "/product_delete/<%= product.id %>";
+      window.location = "/user_delete/<%= user.id %>";
       
    }else{
     return(null);
