--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -19,22 +19,12 @@
     <tbody id="myTable">
         <%products.forEach(function(product){ %>
         <tr>
-            <td scope="row">
-                <%= product.id %>
-            </td>
-            <td>
-                <%= product.title %>
-            </td>
-            <td>
-                <%= product.price %>
-            </td>
-            <td>
-                <a class="btn btn-primary" href="/products/<%= product.id %>" role="button">EDIT</a>
-            </td>
+            <td scope="row"> <%= product.id %></td>
+            <td><%= product.title %></td>
+            <td><%= product.price %></td>
+            <td><a class="btn btn-primary" href="/products/<%= product.id %>" role="button">EDIT</a></td>
         </tr>
         <% }); %>
-
-
     </tbody>
 </table>
 <script>
