--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,11 +32,10 @@
     
     
     
-    
     <style>
         body {
             background-color: wheat;
-            
+            background-repeat: no-repeat;
         }
         </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
