--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,8 +34,8 @@
     
     <style>
         body {
-            background-color: wheat;
-            background-repeat: no-repeat;
+            background-color: palevioletred;
+           
         }
         </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
