--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<div class="jumbotron"></div>
+<div class="jumbotron">
 <table class="table">     
     <thead>
         <tr>
