--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -73,7 +73,7 @@
 
         </div>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control" id="myInput" type="text" placeholder="Search..">
+            <input class="form-control" id="myInput" type="text" placeholder="Search..">&nbsp; 
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
