--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,7 @@
     <style>
         body {
             background-color: wheat;
+            background-repeat: repeat-x;
            
         }
         </style>
@@ -73,7 +74,7 @@
 
         </div>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control" id="myInput" type="text" placeholder="Search..">&nbsp; 
+            <input class="form-control" id="myInput" type="text" placeholder="Search..">&nbsp;&nbsp; 
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
