--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,7 +66,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Report</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Report Product</a>
+                        <a class="dropdown-item" href="/report_product">Report Product</a>
                         <a class="dropdown-item" href="#">Report User</a>
                     </div>
                 </li>
