--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -67,7 +67,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Report</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/report_product">Report Product</a>
-                        <a class="dropdown-item" href="#">Report User</a>
+                        <a class="dropdown-item" href="/report_user">Report User</a>
                     </div>
                 </li>
             </ul>
