--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -34,7 +34,7 @@
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="form-control" value="<%= time %>" name="time" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
+    class="form-control" value="<%= time %>" name="time" id="datepicker" width="276" aria-describedby="helpId" placeholder="" >
   <small id="helpId" class="form-text text-muted">Creat At</small>
   <script>
       $('#datepicker').datepicker({
