--- a/views/pages/report_user.ejs
+++ b/views/pages/report_user.ejs
@@ -5,7 +5,8 @@
         <tr>
             <th>ID</th>
             <th>Email</th>
-            <th>password</th>
+            <th>Password</th>
+            <th>Detail</th>
         </tr>
     </thead>
     <tbody id="myTable">
@@ -14,6 +15,7 @@
             <td scope="row"><%= user.id %></td>
             <td><%= user.email %></td>
             <td><%= user.password %></td>
+            <td><%= user.detail %></td>
             <td>
             </td>
         </tr>
