--- a/views/pages/report_user.ejs
+++ b/views/pages/report_user.ejs
@@ -15,7 +15,7 @@
             <td scope="row"><%= user.id %></td>
             <td><%= user.email %></td>
             <td><%= user.password %></td>
-            <td><%= user.detail %></td>
+            <td><%= user.details %></td>
             <td>
             </td>
         </tr>
