--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -25,6 +25,17 @@
 <button type="submit" class="btn btn-primary">ADD NEW</button>
 
 </div>
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="text"
+    class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
+  <small id="helpId" class="form-text text-muted">Creat At</small>
+  <script>
+      $('#datepicker').datepicker({
+      showOtherMonths: true
+  });
+  </script>
+</div>
 </form>
 
 <% include ../partials/footer %>
