--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -28,7 +28,7 @@
 <div class="form-group">
   <label for="">Creat At</label>
   <input type="text"
-    class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="" disabled>
+    class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="">
   <small id="helpId" class="form-text text-muted">Creat At</small>
   <script>
       $('#datepicker').datepicker({
