--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -21,7 +21,18 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 
-
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="text"
+    class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Creat At</small></div>
+  <a name="" id="" class="btn btn-secondary" href="/products" role="button">CANCLE</a>
+<button type="submit" class="btn btn-primary">ADD NEW</button>
+  <script>
+      $('#datepicker').datepicker({
+      showOtherMonths: true
+  });
+  </script>
 
 </div>
 <div class="form-group">
