--- a/views/pages/addnewproduct.ejs
+++ b/views/pages/addnewproduct.ejs
@@ -20,7 +20,7 @@
 
     <div class="form-group">
       <label for="">Creat At</label>
-      <input type="text" class="form-control" value="<%= time %>" name="creat at" id="datepicker" width="276"
+      <input type="text" class="form-control" value="<%= time %>" name="time" id="datepicker" width="276"
         aria-describedby="helpId" placeholder="">
       <small id="helpId" class="form-text text-muted">Creat At</small>
     </div>
