--- a/views/pages/addnewuser.ejs
+++ b/views/pages/addnewuser.ejs
@@ -22,8 +22,21 @@
   <small id="helpId" class="form-text text-muted"></small>
 </div>
 
+<div class="form-group">
+  <label for="">Creat At</label>
+  <input type="text" class="form-control" value="<%= time %>" name="time" id="datepicker" width="276" aria-describedby="helpId" placeholder="">
+  <small id="helpId" class="form-text text-muted">Creat At</small>
+</div>
+
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-primary">ADD NEW</button>
+
+
+<script>
+  $('#datepicker').datepicker({
+    showOtherMonths: true
+  });
+</script>
 
 </div>
 </form>
