--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,8 @@
         body {
             background-color: wheat;
             background-repeat: repeat-x;
-            font-family: 'Lobster', cursive;
+            
+            font-family: 'Yanone Kaffeesatz', sans-serif;
            
         }
         </style>
