--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
                 <button type="button" href="/users" class="btn btn-primary"> <span class="badge">7</span></button>-->
                 <a class="btn btn-warning " href="/products" role="button">PRODUCT<span class="badge">7</span></a>
                 <a class="btn btn-success" href="/users" role="button">USER<span class="badge">3</span></a>
+                <i class="fa fa-cloud" style="font-size:60px;color:lightblue;"></i>
             </p>
         </div>
 
