--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
     <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Advent+Pro|Fira+Sans+Extra+Condensed|Ropa+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
     
     <!
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,10 +40,8 @@
         body {
             background-color: wheat;
             background-repeat: repeat-x;
-            font-family: 'Ropa Sans', sans-serif;
-            font-family: 'Fira Sans Extra Condensed', sans-serif;
-            font-family: 'Advent Pro', sans-serif;
-            font-size: 27px;
+            font-family: 'Saira Semi Condensed', sans-serif;
+            font-size: 25px;
            
            
         }
