--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div class="row">
         <div class="col">
-            <p class="text-center">@copyright 2018</p>
+            <p class="text-right">@copyright 2018</p>
         </div>
     </div>
 </div>
